tests/baselines/reference/nullAssignedToUndefined.errors.txt
==== tests/cases/compiler/nullAssignedToUndefined.ts (1 errors) ====
    var x = undefined = null; // error
            ~~~~~~~~~
!!! nullAssignedToUndefined.ts(1,9): error TS2011: Type 'any' is not assignable to type 'any'.
    var y: typeof undefined = null; // ok, widened